# rust-api-kit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/http/: anyhow_integration.rs  axum_integration.rs  mod.rs
src/http/client/: integration.rs  macros.rs  mod.rs  types.rs
