[package]
name = "rust-api-integrator"
version = "0.1.0"
edition = "2024"
authors = ["b8end27 <b8end27@outlook.com>"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["std", "serde"] }
axum = { version = "0.8.3", optional = true }
anyhow = { version = "1.0.98", optional = true }

[features]
default = []
all = ["axum", "anyhow"]
axum-integration =  ["axum"]
anyhow-integration = ["anyhow"]
